--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,8 @@
 @import 'styles/base/_typography.scss'; 
 @import 'styles/base/_buttons.scss'; 
 
+// MODULES
+
 
 // COMPONENTS
+@import 'styles/components/_App.scss'; 
