--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,19 +1,16 @@
 /*---------------
   FONTS
 ---------------*/
-
+$primary-font: 'Syncopate', sans-serif;
+$secondary-font: 'Space Mono', monospace;
  
 /*---------------
   COLORS
 ---------------*/
 $black: #000000;
-$white: #FFFFFF; 
-$greyF: #F6F6F6;
-$greyD: #DDDDDD;
-$greyC: #CCCCCC;
-$grey7: #747676;
-$grey8: #888888;
-$greyD8: #D8DADA;
+$background: #c4cad1;
+$grey3: #333333;
+$grey5: #555555; 
 
 /*---------------
   MEDIA QUERIES
