--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,8 @@
 html, body {
     width: 100%;
     margin: 0px;
-    padding: 0px;
+    padding: 30px 50px;
+    background-color: $background;
     outline: none;
     border: 0;
 }
