--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,6 +4,12 @@ h1 {
     font-weight: 400; 
     color: $black; 
 }
+h2 {
+    font-family: $primary-font;
+    font-size: 25px; 
+    font-weight: 400; 
+    color: $black; 
+}
 p {
     font-size: 16px; 
     font-family: $secondary-font; 
