--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -1,11 +1,40 @@
 .App {
     .header {
         border-bottom: 2px solid $black;
+        margin-bottom: 50px; 
         p {
             margin-bottom: 10px; 
-        }
+        } 
         select {
             margin-bottom: 20px; 
         }
     }
+
+    .unselected, .selected {
+        width: 50%; 
+        padding-top: 20px; 
+        padding-bottom: 100px; 
+        h2 {
+            margin-bottom: 20px; 
+        }
+        .card {
+            border: 2px solid $black; 
+            padding: 15px; 
+            margin-bottom: 20px; 
+        }
+    }
+
+    .unselected {
+        float: left; 
+        padding-right: 10px; 
+    }
+
+    .selected {
+        float: right; 
+        padding-left: 10px; 
+    }
+
+
+
+
 }
