--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -10,6 +10,12 @@ h2 {
     font-weight: 400; 
     color: $black; 
 }
+h3 {
+    font-family: $secondary-font;
+    font-size: 20px; 
+    font-weight: 400; 
+    color: $black; 
+}
 p {
     font-size: 16px; 
     font-family: $secondary-font; 
