--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -19,8 +19,26 @@
         }
         .card {
             border: 2px solid $black; 
-            padding: 15px; 
             margin-bottom: 20px; 
+            position: relative; 
+            height: 104px; 
+            img {
+                width: 100px; 
+                position: absolute; 
+                right: 0; 
+                top: 0; 
+            }
+            .content {
+                margin-top: 10px; 
+                margin-left: 10px; 
+            }
+            .button {
+                cursor: pointer; 
+                float: right; 
+                position: absolute; 
+                bottom: 20px; 
+                right: 10px;
+            }
         }
     }
 
