--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -25,19 +25,34 @@
             img {
                 width: 100px; 
                 position: absolute; 
-                right: 0; 
+                left: 0; 
                 top: 0; 
             }
             .content {
-                margin-top: 10px; 
-                margin-left: 10px; 
+                margin-top: 20px; 
+                margin-left: 120px; 
             }
             .button {
                 cursor: pointer; 
                 float: right; 
                 position: absolute; 
-                bottom: 20px; 
-                right: 10px;
+                bottom: 30px; 
+                right: 20px;
+                font-family: $primary-font;
+                font-size: 16px; 
+                font-weight: 400; 
+                color: $black; 
+                border: 2px solid $black; 
+                // padding: 10px 20px; 
+                padding-top: 10px; 
+                padding-bottom: 8px; 
+                padding-left: 20px; 
+                padding-right: 20px; 
+                transition: $transition; 
+                &:hover {
+                    color: $red; 
+                    border-color: $red; 
+                }
             }
         }
     }
