--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 @import 'styles/base/_buttons.scss'; 
 
 // MODULES
-
+@import 'styles/modules/_select.scss'; 
 
 // COMPONENTS
 @import 'styles/components/_App.scss'; 
