--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -1,74 +1,78 @@
 .App {
     .header {
         border-bottom: 2px solid $black;
-        margin-bottom: 30px; 
+        margin-bottom: 30px;
         p {
-            margin-bottom: 10px; 
-        } 
+            margin-bottom: 10px;
+        }
         .styled-select {
-            margin-bottom: 20px; 
+            margin-bottom: 20px;
+            width: 165px; 
+            background: none;
+            border: 1px solid black;
         }
         select {
             outline: none;
-            font-family: $secondary-font !important; 
+            cursor: pointer;
+            font-family: $secondary-font !important;
         }
     }
 
     .unselected, .selected {
-        width: 50%; 
-        padding-top: 20px; 
-        padding-bottom: 100px; 
+        width: 50%;
+        padding-top: 20px;
+        padding-bottom: 100px;
         h2 {
-            margin-bottom: 20px; 
+            margin-bottom: 20px;
         }
         .card {
-            border: 2px solid $black; 
-            margin-bottom: 20px; 
-            position: relative; 
-            height: 104px; 
+            border: 2px solid $black;
+            margin-bottom: 20px;
+            position: relative;
+            height: 104px;
             img {
-                width: 100px; 
-                position: absolute; 
-                left: 0; 
-                top: 0; 
+                width: 100px;
+                position: absolute;
+                left: 0;
+                top: 0;
             }
             .content {
-                margin-top: 20px; 
-                margin-left: 120px; 
+                margin-top: 20px;
+                margin-left: 120px;
             }
             .button {
-                cursor: pointer; 
-                float: right; 
-                position: absolute; 
-                bottom: 30px; 
+                cursor: pointer;
+                float: right;
+                position: absolute;
+                bottom: 30px;
                 right: 20px;
                 font-family: $primary-font;
-                font-size: 16px; 
-                font-weight: 400; 
-                color: $black; 
-                border: 2px solid $black; 
-                // padding: 10px 20px; 
-                padding-top: 10px; 
-                padding-bottom: 8px; 
-                padding-left: 20px; 
-                padding-right: 20px; 
-                transition: $transition; 
+                font-size: 16px;
+                font-weight: 400;
+                color: $black;
+                border: 2px solid $black;
+                // padding: 10px 20px;
+                padding-top: 10px;
+                padding-bottom: 8px;
+                padding-left: 20px;
+                padding-right: 20px;
+                transition: $transition;
                 &:hover {
-                    color: $red; 
-                    border-color: $red; 
+                    color: $red;
+                    border-color: $red;
                 }
             }
         }
     }
 
     .unselected {
-        float: left; 
-        padding-right: 10px; 
+        float: left;
+        padding-right: 10px;
     }
 
     .selected {
-        float: right; 
-        padding-left: 10px; 
+        float: right;
+        padding-left: 10px;
     }
 
 
